Fig view bug on mobile phantom app

--- a/src/components/RadioButton/RadioButton.module.scss
+++ b/src/components/RadioButton/RadioButton.module.scss
@@ -14,15 +14,11 @@
     -moz-appearance: none;
     appearance: none;
   }
+}
 
-  input:disabled + label {
-    cursor: default;
-    opacity: 0.7;
-
-    &:hover {
-      border: 1px solid var(--primary-border);
-    }
-  }
+.disabledButton {
+  pointer-events: none;
+  opacity: 0.7;
 }
 
 .btn {
